manifest/objects/ALTF__Insight_Card_Section__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__ConcatenatedFields__c</fullName>
        <formula>IF(ISBLANK(ALTF__Insight_Section__c), &apos;NULL&apos;, CASESAFEID(ALTF__Insight_Section__c)) &amp; TEXT(ALTF__Insight_Card__r.ALTF__Type__c) &amp;  TEXT(ALTF__X_Coordinate__c)  &amp; TEXT(ALTF__Y_Coordinate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Card__c</fullName>
        <label>Insight Card</label>
        <referenceTo>ALTF__Insight_Card__c</referenceTo>
        <relationshipLabel>Altify Insight Card Sections</relationshipLabel>
        <relationshipName>Insight_Node_Topics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Insight_Section__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Altify Topic</label>
        <referenceTo>ALTF__Insight_Section__c</referenceTo>
        <relationshipLabel>Altify Insight Card Sections</relationshipLabel>
        <relationshipName>Insight_Node_Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__X_Coordinate__c</fullName>
        <label>X Coordinate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Y_Coordinate__c</fullName>
        <label>Y Coordinate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Insight Card Section</label>
    <nameField>
        <label>Insight Node Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Insight Card Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>